# vine-suite

./: .dockerignore  .gitignore  .gitmodules  DEPLOY.md  Dockerfile  Makefile  README.md  build-with-network.sh  docker-compose.full.yml  docker-compose.yaml  docker-compose.yml  github-setup.sh  nginx.conf  requirements.txt  run_dev.sh  run_prod.sh  vine-api-design.md  vine-api-implementation-plan.md
app/: main.py
frontend/: next.config.js  next.config.prod.js  tsconfig.tsbuildinfo
ocr-service/: Dockerfile  setup_models.sh
scripts/: measure_ocr.py
tests/: __init__.py  test_ocr.py  (+3 more)
vine-api/: .env.example  DEPLOY.md  Dockerfile  README.md  docker-compose.full.yml  pyproject.toml  requirements.txt
vine-api/app/: __init__.py  main.py
vine-api/app/api/: analyze.py  health.py
vine-api/app/core/: constants.py  settings.py
vine-api/app/models/: __init__.py  wine.py
vine-api/app/services/: __init__.py  scoring.py
vine-api/app/services/image/: __init__.py  cropper.py  opencv.py
vine-api/app/services/ocr/: client.py  easyocr.py  paddle.py  preprocessor.py  tesseract.py
vine-api/app/services/pipeline/: __init__.py  paddle_qwen.py  types.py
vine-api/app/services/search/: __init__.py  google.py  playwright.py
vine-api/app/services/vlm/: __init__.py  base.py  gemini.py  mistral.py  paddle_vlm.py  qwen.py
vine-api/frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
vine-api/frontend/app/: layout.tsx
vine-api/frontend/app/health/: page.tsx
vine-api/frontend/components/ui/: Badge.tsx  Card.tsx  index.ts
vine-api/frontend/lib/: types.ts
vine-api/ocr-service/: Dockerfile  config.py  download_models.py  evaluation.py  main.py  requirements.txt
vine-api/tests/: ocr_benchmark.py
vine-api/tests/fixtures/golden/shared/: analyze_request.json  batch_request.json
(+29 files in other folders)
