[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vine-api"
version = "0.1.0"
description = "Unified wine image analysis service"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Vine Suite Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
# Phase 2: Core providers
core = [
    "easyocr>=1.7.0",
    "pillow>=10.1.0",
    "numpy>=1.26.0",
    "playwright>=1.40.0",
    "google-generativeai>=0.3.0",
]

# Phase 4: All providers
all = [
    "easyocr>=1.7.0",
    "pillow>=10.1.0",
    "numpy>=1.26.0",
    "playwright>=1.40.0",
    "google-generativeai>=0.3.0",
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
    "pytesseract>=0.3.10",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
vine-api = "app.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
